tests/requests/snapshots/admin_can_add_user@user_request-2.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    200,
    "{\"token\":\"TOKEN\",\"pid\":\"PID\",\"name\":\"new_user\",\"is_verified\":true}",
)
