tests/requests/snapshots/admin_can_add_user@user_request.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    201,
    "",
)
