tests/requests/snapshots/admin_can_add_user_by_new_user@example.com_and_user1@user_request.snap
---
source: tests/requests/user.rs
expression: "try_login_response.json::<serde_json::Value>()"
---
{
  "description": "You do not have permission to access this resource",
  "error": "unauthorized"
}
