tests/requests/snapshots/can_filter_user_by_role@user_request.snap
---
source: tests/requests/user.rs
expression: response
---
{
  "results": [
    {
      "username": "first_admin",
      "displayed_name": "first_admin",
      "role": 0
    }
  ],
  "pagination": {
    "page": 1,
    "page_size": 25,
    "total_pages": 1
  }
}
