tests/requests/snapshots/can_get_note@notes_request-2.snap
---
source: tests/requests/notes.rs
expression: "(get_non_existent_note_request.status_code(),\n    get_non_existent_note_request.text())"
---
(
    404,
    "{\"error\":\"not_found\",\"description\":\"Resource was not found\"}",
)
