tests/requests/snapshots/list_users_user1@user_request.snap
---
source: tests/requests/user.rs
expression: "response.json::<serde_json::Value>()"
---
{
  "msg": "Insufficient Permissions"
}
