tests/requests/snapshots/normal_user_cannot_add_user@user_request.snap
---
source: tests/requests/user.rs
expression: "(response.status_code(), response.text())"
---
(
    403,
    "{\"msg\":\"Insufficient Permissions\"}",
)
