tests/requests/snapshots/student_cannot_create_problem@problem_request.snap
---
source: tests/requests/problems.rs
expression: "response.json::<serde_json::Value>()"
---
Object {
    "msg": String("Insufficient Permissions"),
}
